# aif10-scraper

./: .gitignore  600519_F10_data_source_report.md  LICENSE  README.md  STRESS_TEST_RESULTS.md  pyproject.toml
aif10_scraper/: __init__.py  batch.py  client.py  registry.py
docs/: p6_probe.json
examples/: 01_quick_start.py
schema/: _failed.txt  rpt_billboard_dailydetails.sql  rpt_dailybillboard_detailsnew.sql  rpt_data_blocktrade.sql  rpt_dmsk_holders.sql  rpt_executive_hold_details.sql  rpt_f10_basic_orginfo.sql  rpt_f10_capital_item.sql  rpt_f10_capital_raise.sql  rpt_f10_coretheme_boardtype.sql  rpt_f10_coretheme_content.sql  rpt_f10_dividend_3year.sql  rpt_f10_dividend_compre.sql  rpt_f10_dividend_curve.sql  rpt_f10_dividend_effect.sql  rpt_f10_dividend_main.sql  rpt_f10_dividend_seo.sql  rpt_f10_dividendnew_lity.sql  rpt_f10_dividendnew_profile.sql  rpt_f10_eh_equity.sql  rpt_f10_eh_freeholders.sql  rpt_f10_eh_freeholdersdate.sql  rpt_f10_eh_holdernum.sql  rpt_f10_eh_holders.sql  rpt_f10_eh_holdersdate.sql  rpt_f10_eh_relation.sql  rpt_f10_finance_dupont.sql  rpt_f10_finance_gbalance.sql  rpt_f10_finance_gcashflow.sql  rpt_f10_finance_gcashflowqc.sql  rpt_f10_finance_gincome.sql  rpt_f10_finance_gincomeqc.sql  rpt_f10_finance_gratio.sql  rpt_f10_finance_mainfinadata.sql  rpt_f10_fn_mainop.sql  rpt_f10_free_totalholdnum.sql  rpt_f10_main_orgholddetails.sql  rpt_f10_op_businessanalysis.sql  rpt_f10_orginfo_manaintro.sql  rpt_f10_public_companytpye.sql  (+33 more)
scripts/: generate_ddl.py  probe_p6_targets.py  validate_schema.py
stress/: concurrency_test.py
(+3 files in other folders)
